Changed font size to avoid zoom on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -274,6 +274,7 @@ h3 {
     -moz-box-shadow: none;
     box-shadow: none;
     padding: 5px;
+    font-size: 16px;
 }
 
 .g-recaptcha {
